--- a/scripts/nginx.doflins.conf
+++ b/scripts/nginx.doflins.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name doflins.dofer.com.mx;
+  server_name doflins.dofer.mx;
 
   location / {
     proxy_pass http://127.0.0.1:3000;
