--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,15 +47,13 @@ services:
 
   mysql:
     image: mysql:8.4
-    container_name: doflins-mysql
+    container_name: doflins-mysql-prod
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
       MYSQL_DATABASE: ${MYSQL_DATABASE:-doflins}
       MYSQL_USER: ${MYSQL_USER:-doflins}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-doflins}
-    ports:
-      - "3306:3306"
     volumes:
       - doflins_mysql_data:/var/lib/mysql
     healthcheck:
