--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
         NEXT_PUBLIC_GTM_ID: ${NEXT_PUBLIC_GTM_ID:-}
         NEXT_PUBLIC_META_PIXEL_ID: ${NEXT_PUBLIC_META_PIXEL_ID:-}
         NEXT_PUBLIC_TIKTOK_PIXEL_ID: ${NEXT_PUBLIC_TIKTOK_PIXEL_ID:-}
-    container_name: doflins-app
     restart: unless-stopped
     environment:
       NODE_ENV: production
@@ -34,8 +33,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     volumes:
       - doflins_uploads:/app/public/uploads/doflins
     healthcheck:
@@ -47,15 +46,14 @@ services:
 
   mysql:
     image: mysql:8.4
-    container_name: doflins-mysql
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
       MYSQL_DATABASE: ${MYSQL_DATABASE:-doflins}
       MYSQL_USER: ${MYSQL_USER:-doflins}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-doflins}
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     volumes:
       - doflins_mysql_data:/var/lib/mysql
     healthcheck:
