--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       PORT: 3000
       HOSTNAME: 0.0.0.0
       DATABASE_URL: ${DATABASE_URL:-mysql://doflins:doflins@mysql:3306/doflins}
-      WAIT_FOR_DB: ${WAIT_FOR_DB:-true}
+      WAIT_FOR_DB: ${WAIT_FOR_DB:-off}
       DB_WAIT_TIMEOUT_SECONDS: ${DB_WAIT_TIMEOUT_SECONDS:-120}
       DB_WAIT_INTERVAL_SECONDS: ${DB_WAIT_INTERVAL_SECONDS:-3}
-      RUN_DB_MIGRATIONS: ${RUN_DB_MIGRATIONS:-true}
+      RUN_DB_MIGRATIONS: ${RUN_DB_MIGRATIONS:-off}
       NEXT_PUBLIC_WOO_PRODUCT_URL: ${NEXT_PUBLIC_WOO_PRODUCT_URL:-https://dofer.mx}
       NEXT_PUBLIC_TIKTOK_URL: ${NEXT_PUBLIC_TIKTOK_URL:-https://www.tiktok.com}
       NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL:-}
